--- a/src/styles/Nav.module.css
+++ b/src/styles/Nav.module.css
@@ -1,12 +1,28 @@
 .nav_box {
     width: 100%; height: 100px;
-    background-color: tomato;
+    position: relative;
+}
+.left_nav {
+    position: absolute;
+    left: 0px;
     display: flex;
 }
+.right_nav {
+    position: absolute;
+    right: 0px;
+    display: flex;
+}
+
 .menu_box {
-    height: 80px;
-    margin: 0px 30px;
+    height: 100px;
+    margin: 0px 50px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 .menu_name {
     font-size: 30px;
+}
+.menu_name:hover {
+    cursor: pointer;
 }
