--- a/src/styles/Nav.module.css
+++ b/src/styles/Nav.module.css
@@ -13,6 +13,10 @@
     display: flex;
 }
 
+.nav_mainImage {
+    width: 50px; height: 50px; margin: 25px;
+}
+
 .menu_box {
     height: 100px;
     margin: 0px 50px;
