--- a/src/styles/style.module.css
+++ b/src/styles/style.module.css
@@ -8,3 +8,83 @@
     text-decoration-thickness: 2px;
     color: black;
 }
+
+.homepage {
+    width: 100vw; height: 100vh;
+}
+.homepage_section {
+}
+.homepage_title {
+    width: 100%; height: 100px; margin-top: 50px;
+    text-align: center;
+    line-height: 100px;
+    font-size: 100px;
+    letter-spacing: 10px;
+}
+.homepage_mainImage {
+    display: block;
+    width: 400px; height: 400px; margin: 0px auto;
+}
+.homepage_login {
+    width: 100%; height: 60px;
+    text-align: center;
+    line-height: 60px;
+    font-size: 60px;
+}
+
+.nav_box {
+    width: 100%; height: 100px;
+    position: relative;
+}
+.left_nav {
+    position: absolute;
+    left: 0px;
+    display: flex;
+}
+.right_nav {
+    position: absolute;
+    right: 0px;
+    display: flex;
+}
+
+.nav_mainImage {
+    width: 50px; height: 50px; margin: 25px;
+}
+
+.menu_box {
+    height: 100px;
+    margin: 0px 50px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.menu_name {
+    font-size: 30px;
+}
+.menu_name:hover {
+    cursor: pointer;
+}
+
+.infopage {
+    width: 100vw; height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+.section {
+    flex: 1;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+.content_item_box {
+    width: 320px; height: 600px;
+    border: 2px solid black;
+    border-radius: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.content_title {
+    text-align: center;
+    font-size: 50px;
+}
