--- a/src/styles/style.module.css
+++ b/src/styles/style.module.css
@@ -9,13 +9,38 @@
     color: black;
 }
 
-.homepage {
+.screen_size {
     width: 100vw; height: 100vh;
 }
-.homepage_section {
+.flex_container_row {
+    display: flex;
+    flex-direction: row;
 }
+.flex_container_col {
+    display: flex;
+    flex-direction: column;
+}
+.section_size {
+    flex-grow: 1;
+}
+
+.mainpage {
+    width: 100vw; height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+.mainpage_section_v1 {
+    flex-grow: 1;
+}
+.mainpage_section_v2 {
+    flex-grow   : 1;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
 .homepage_title {
-    width: 100%; height: 100px; margin-top: 50px;
+    width: 100%; height: 100px; margin-top: 100px;
     text-align: center;
     line-height: 100px;
     font-size: 100px;
@@ -65,17 +90,6 @@
     cursor: pointer;
 }
 
-.infopage {
-    width: 100vw; height: 100vh;
-    display: flex;
-    flex-direction: column;
-}
-.section {
-    flex: 1;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-}
 .content_item_box {
     width: 320px; height: 600px;
     border: 2px solid black;
@@ -87,4 +101,35 @@
 .content_title {
     text-align: center;
     font-size: 50px;
+}
+.content_box {
+    width: 95%; height: 90%; margin: 0px auto; 
+    border: 2px solid black;
+    border-radius: 20px;
+}
+
+.about_title {
+    height: 100px; margin-left: 30px;
+    line-height: 100px;
+    font-size: 50px;
+}
+.about_text {
+    height: 200px; margin-left: 30px;
+    font-size: 30px;
+}
+.about_contact_box {
+    height: 50px; margin: 0px 30px 20px;
+    line-height: 50px;
+    font-size: 30px;
+    display: flex;
+}
+.about_contact_name {
+    width: 200px;
+    flex-grow: 1;
+}
+.about_contact_email {
+    flex-grow: 4;
+}
+.about_contact_part {
+    flex-grow: 0;
 }
