--- a/src/styles/style.module.css
+++ b/src/styles/style.module.css
@@ -106,6 +106,8 @@
     width: 95%; height: 90%; margin: 0px auto; 
     border: 2px solid black;
     border-radius: 20px;
+    display: flex;
+    flex-direction: column;
 }
 
 .about_title {
@@ -137,4 +139,37 @@
 .update_coming {
     width: 500px; height: 500px; margin: 50px auto;
     font-size: 50px;
+}
+
+.rank_section {
+    flex-grow: 1; padding: 10px 30px; 
+    display: flex;
+}
+.rank_box {
+    width: 100%; height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+.rank_box:first-child {
+    margin-right: 10px;
+}
+.rank_box:last-child {
+    margin-left: 10px;
+}
+.rank_bar {
+    flex-basis: 40px;
+    line-height: 40px;
+    font-size: 25px;
+    display: flex;
+}
+.rank_bar_Rank {
+    flex-basis: 100px;
+}
+.rank_bar_Nick {
+    flex-basis: 100px;
+    flex-grow: 2;
+}
+.rank_bar_Chip {
+    flex-basis: 100px;
+    text-align: right;
 }
