--- a/src/styles/style.module.css
+++ b/src/styles/style.module.css
@@ -2,6 +2,7 @@
     text-decoration: none;
     color: black;
 }
+
 .link_current {
     text-decoration-line: underline;
     text-decoration-color: black;
@@ -10,62 +11,90 @@
 }
 
 .screen_size {
-    width: 100vw; height: 100vh;
+    width: 100vw;
+    height: 100vh;
 }
+
 .flex_container_row {
     display: flex;
     flex-direction: row;
 }
+
 .flex_container_col {
     display: flex;
     flex-direction: column;
 }
+
 .section_size {
     flex-grow: 1;
 }
 
 .mainpage {
-    width: 100vw; height: 100vh;
+    width: 100vw;
+    height: 100vh;
     display: flex;
     flex-direction: column;
 }
+
 .mainpage_section_v1 {
     flex-grow: 1;
+    padding-top: 100px;
 }
+
 .mainpage_section_v2 {
-    flex-grow   : 1;
+    flex-grow: 1;
     display: flex;
     justify-content: space-around;
     align-items: center;
+    padding-top: 100px;
+}
+
+.mainpage_section_v3 {
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    padding: 0px 50px;
+    padding-top: 100px;
 }
 
 .homepage_title {
-    width: 100%; height: 100px; margin-top: 100px;
+    width: 100%;
+    height: 100px;
+    margin-top: 100px;
     text-align: center;
     line-height: 100px;
     font-size: 100px;
     letter-spacing: 10px;
 }
+
 .homepage_mainImage {
     display: block;
-    width: 400px; height: 400px; margin: 0px auto;
+    width: 400px;
+    height: 400px;
+    margin: 0px auto;
 }
+
 .homepage_login {
-    width: 100%; height: 60px;
+    width: 100%;
+    height: 60px;
     text-align: center;
     line-height: 60px;
     font-size: 60px;
 }
 
 .nav_box {
-    width: 100%; height: 100px;
-    position: relative;
+    position: fixed;
+    width: 100%;
+    height: 100px;
+    z-index: 10;
 }
+
 .left_nav {
     position: absolute;
     left: 0px;
     display: flex;
 }
+
 .right_nav {
     position: absolute;
     right: 0px;
@@ -73,7 +102,9 @@
 }
 
 .nav_mainImage {
-    width: 50px; height: 50px; margin: 25px;
+    width: 50px;
+    height: 50px;
+    margin: 25px;
 }
 
 .menu_box {
@@ -83,27 +114,34 @@
     flex-direction: column;
     justify-content: center;
 }
+
 .menu_name {
     font-size: 30px;
 }
+
 .menu_name:hover {
     cursor: pointer;
 }
 
 .content_item_box {
-    width: 320px; height: 600px;
+    width: 320px;
+    height: 600px;
     border: 2px solid black;
     border-radius: 20px;
     display: flex;
     flex-direction: column;
     justify-content: center;
 }
+
 .content_title {
     text-align: center;
     font-size: 50px;
 }
+
 .content_box {
-    width: 95%; height: 90%; margin: 0px auto; 
+    width: 95%;
+    height: 90%;
+    margin: 0px auto;
     border: 2px solid black;
     border-radius: 20px;
     display: flex;
@@ -111,65 +149,105 @@
 }
 
 .about_title {
-    height: 100px; margin-left: 30px;
+    height: 100px;
+    margin-left: 30px;
     line-height: 100px;
     font-size: 50px;
 }
+
 .about_text {
-    height: 200px; margin-left: 30px;
+    height: 200px;
+    margin-left: 30px;
     font-size: 30px;
 }
+
 .about_contact_box {
-    height: 50px; margin: 0px 30px 20px;
+    height: 50px;
+    margin: 0px 30px 20px;
     line-height: 50px;
     font-size: 30px;
     display: flex;
 }
+
 .about_contact_name {
     width: 200px;
     flex-grow: 1;
 }
+
 .about_contact_email {
     flex-grow: 4;
 }
+
 .about_contact_part {
     flex-grow: 0;
 }
 
 .update_coming {
-    width: 500px; height: 500px; margin: 50px auto;
+    width: 500px;
+    height: 500px;
     font-size: 50px;
+    padding: 150px 50px;
 }
 
 .rank_section {
-    flex-grow: 1; padding: 10px 30px; 
+    flex-grow: 1;
+    padding: 10px 30px;
     display: flex;
 }
+
 .rank_box {
-    width: 100%; height: 100%;
+    width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
 }
+
 .rank_box:first-child {
     margin-right: 10px;
 }
+
 .rank_box:last-child {
     margin-left: 10px;
 }
+
 .rank_bar {
     flex-basis: 40px;
     line-height: 40px;
     font-size: 25px;
     display: flex;
 }
+
 .rank_bar_Rank {
     flex-basis: 100px;
 }
+
 .rank_bar_Nick {
     flex-basis: 100px;
     flex-grow: 2;
 }
+
 .rank_bar_Chip {
     flex-basis: 100px;
     text-align: right;
+}
+
+.community_sub_title {
+    width: 100%;
+    flex-grow: 0;
+    flex-basis: 100px;
+    line-height: 100px;
+    font-size: 70px;
+}
+
+.community_sub_box {
+    width: 100%;
+    flex-grow: 1;
+    flex-basis: 500px;
+    display: flex;
+    justify-content: space-around;
+}
+
+.community_sub_footer {
+    width: 100%;
+    flex-basis: 100px;
 }
