--- a/src/styles/style.module.css
+++ b/src/styles/style.module.css
@@ -58,29 +58,28 @@
 }
 
 .homepage_title {
-    width: 100%;
-    height: 100px;
-    margin-top: 100px;
-    text-align: center;
+    width: fit-content;
     line-height: 100px;
     font-size: 100px;
-    letter-spacing: 10px;
+    letter-spacing: 10px;   
 }
 
 .homepage_mainImage {
-    display: block;
     width: 400px;
     height: 400px;
-    margin: 0px auto;
 }
 
 .homepage_login {
-    width: 100%;
-    height: 60px;
-    text-align: center;
+    width: fit-content;
     line-height: 60px;
     font-size: 60px;
     cursor: pointer;
+}
+
+.homepage_greeting {
+    width: fit-content;
+    line-height: 60px;
+    font-size: 60px;
 }
 
 .nav_box {
@@ -232,7 +231,7 @@
     text-align: right;
 }
 
-.section_title {
+.community_sub_title {
     width: 100%;
     flex-grow: 0;
     flex-basis: 100px;
@@ -240,7 +239,7 @@
     font-size: 70px;
 }
 
-.section_main {
+.community_sub_box {
     width: 100%;
     flex-grow: 1;
     flex-basis: 500px;
@@ -248,7 +247,34 @@
     justify-content: space-around;
 }
 
+.community_sub_footer {
+    width: 100%;
+    flex-basis: 100px;
+}
+
+.section_main {
+    width: 100%;
+    flex-grow: 1;
+    flex-basis: 500px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    gap: 20px;
+}
+
 .section_footer {
     width: 100%;
     flex-basis: 100px;
+    margin-bottom: 30px;
+    position: relative;
+}
+
+.logout_button {
+    position: absolute;
+    left: 0px; bottom: 0px;
+    width: fit-content;
+    font-size: 30px;
+    cursor: pointer;
 }
