--- a/src/styles/style.module.css
+++ b/src/styles/style.module.css
@@ -61,7 +61,7 @@
     width: fit-content;
     line-height: 100px;
     font-size: 100px;
-    letter-spacing: 10px;   
+    letter-spacing: 10px;
 }
 
 .homepage_mainImage {
@@ -203,7 +203,8 @@
 }
 
 .rank_box:first-child {
-    margin-right: 10px;
+    padding-right: 10px;
+    border-right: 1px solid black;
 }
 
 .rank_box:last-child {
@@ -225,6 +226,24 @@
     flex-basis: 100px;
     flex-grow: 2;
 }
+
+.ranking_row {
+    flex-basis: 40px;
+    line-height: 40px;
+    font-size: 25px;
+    display: flex;
+}
+
+.ranking_row>.rank {
+    flex-basis: 100px;
+}
+
+.ranking_row>.nickName {
+    flex-basis: 100px;
+    flex-grow: 2;
+}
+
+.ranking_row>.chip {}
 
 .rank_bar_Chip {
     flex-basis: 100px;
@@ -275,7 +294,8 @@
 
 .logout_button {
     position: absolute;
-    left: 0px; bottom: 0px;
+    left: 0px;
+    bottom: 0px;
     width: fit-content;
     font-size: 30px;
     cursor: pointer;
@@ -283,7 +303,8 @@
 
 .footer_nickName {
     position: absolute;
-    left: 0px; bottom: 0px;
+    left: 0px;
+    bottom: 0px;
     width: fit-content;
     font-size: 30px;
 }
