--- a/src/styles/style.module.css
+++ b/src/styles/style.module.css
@@ -150,9 +150,11 @@
 
 .about_title {
     height: 100px;
-    margin-left: 30px;
+    margin: 0px 30px;
     line-height: 100px;
     font-size: 50px;
+    display: flex;
+    position: relative;
 }
 
 .about_text {
@@ -248,6 +250,16 @@
 .rank_bar_Chip {
     flex-basis: 100px;
     text-align: right;
+}
+
+.myRank {
+    width: 500px;
+    padding: 3px 10px;
+    border: 2px solid black;
+    border-radius: 10px;
+    position: absolute;
+    right: 0px;
+    top: 30px;
 }
 
 .community_sub_title {
