--- a/src/styles/LoginModal.module.css
+++ b/src/styles/LoginModal.module.css
@@ -18,4 +18,28 @@
   border-radius: 10px;
   width: 300px;
   text-align: center;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-content: center;
+}
+
+.modal>h2 {
+  font-size: 50px;
+  margin-bottom: 30px;
+}
+
+.modal>img {
+  margin: 10px 0px;
+  cursor: pointer;
+}
+
+.modal>.closeBtn {
+  width: 25px; height: 25px;
+  position: absolute;
+  top: 10px; right: 10px;
+  font-size: 25px; line-height: 25px;
+  text-align: center;
+  cursor: pointer;
 }
