--- a/src/styles/style.module.css
+++ b/src/styles/style.module.css
@@ -1,322 +1,323 @@
 .link_general {
-    text-decoration: none;
-    color: black;
+  text-decoration: none;
+  color: black;
 }
 
 .link_current {
-    text-decoration-line: underline;
-    text-decoration-color: black;
-    text-decoration-thickness: 2px;
-    color: black;
+  text-decoration-line: underline;
+  text-decoration-color: black;
+  text-decoration-thickness: 2px;
+  color: black;
 }
 
 .screen_size {
-    width: 100vw;
-    height: 100vh;
+  width: 100vw;
+  height: 100vh;
 }
 
 .flex_container_row {
-    display: flex;
-    flex-direction: row;
+  display: flex;
+  flex-direction: row;
 }
 
 .flex_container_col {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 .section_size {
-    flex-grow: 1;
+  flex-grow: 1;
 }
 
 .mainpage {
-    width: 100vw;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 .mainpage_section_v1 {
-    flex-grow: 1;
-    padding-top: 100px;
+  flex-grow: 1;
+  padding-top: 100px;
 }
 
 .mainpage_section_v2 {
-    flex-grow: 1;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    padding-top: 100px;
+  flex-grow: 1;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding-top: 100px;
 }
 
 .mainpage_section_v3 {
-    flex-grow: 1;
-    display: flex;
-    flex-direction: column;
-    padding: 0px 50px;
-    padding-top: 100px;
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  padding: 0px 50px;
+  padding-top: 100px;
 }
 
 .homepage_title {
-    width: fit-content;
-    line-height: 100px;
-    font-size: 100px;
-    letter-spacing: 10px;
+  width: fit-content;
+  line-height: 100px;
+  font-size: 100px;
+  letter-spacing: 10px;
 }
 
 .homepage_mainImage {
-    width: 400px;
-    height: 400px;
+  width: 400px;
+  height: 400px;
 }
 
 .homepage_login {
-    width: fit-content;
-    line-height: 60px;
-    font-size: 60px;
-    cursor: pointer;
+  width: fit-content;
+  line-height: 60px;
+  font-size: 60px;
+  cursor: pointer;
 }
 
 .homepage_greeting {
-    width: fit-content;
-    line-height: 60px;
-    font-size: 60px;
+  width: fit-content;
+  line-height: 60px;
+  font-size: 60px;
 }
 
 .nav_box {
-    position: fixed;
-    width: 100%;
-    height: 100px;
-    z-index: 10;
+  position: fixed;
+  width: 100%;
+  height: 100px;
+  z-index: 10;
 }
 
 .left_nav {
-    position: absolute;
-    left: 0px;
-    display: flex;
+  position: absolute;
+  left: 0px;
+  display: flex;
 }
 
 .right_nav {
-    position: absolute;
-    right: 0px;
-    display: flex;
+  position: absolute;
+  right: 0px;
+  display: flex;
 }
 
 .nav_mainImage {
-    width: 50px;
-    height: 50px;
-    margin: 25px;
+  width: 50px;
+  height: 50px;
+  margin: 25px;
 }
 
 .menu_box {
-    height: 100px;
-    margin: 0px 50px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+  height: 100px;
+  margin: 0px 50px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .menu_name {
-    font-size: 30px;
+  font-size: 30px;
 }
 
 .menu_name:hover {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .content_item_box {
-    width: 300px;
-    height: 500px;
-    border: 2px solid black;
-    border-radius: 20px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+  width: 300px;
+  height: 500px;
+  border: 2px solid black;
+  border-radius: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .content_title {
-    text-align: center;
-    font-size: 50px;
+  text-align: center;
+  font-size: 50px;
 }
 
 .content_box {
-    width: 95%;
-    height: 90%;
-    margin: 0px auto;
-    border: 2px solid black;
-    border-radius: 20px;
-    display: flex;
-    flex-direction: column;
+  width: 95%;
+  height: 90%;
+  margin: 0px auto;
+  border: 2px solid black;
+  border-radius: 20px;
+  display: flex;
+  flex-direction: column;
 }
 
 .about_title {
-    height: 100px;
-    margin: 0px 30px;
-    line-height: 100px;
-    font-size: 50px;
-    display: flex;
-    position: relative;
+  height: 100px;
+  margin: 0px 30px;
+  line-height: 100px;
+  font-size: 50px;
+  display: flex;
+  position: relative;
 }
 
 .about_text {
-    height: 200px;
-    margin-left: 30px;
-    font-size: 30px;
+  height: 200px;
+  margin-left: 30px;
+  font-size: 30px;
 }
 
 .about_contact_box {
-    height: 50px;
-    margin: 0px 30px 20px;
-    line-height: 50px;
-    font-size: 30px;
-    display: flex;
+  height: 50px;
+  margin: 0px 30px 20px;
+  line-height: 50px;
+  font-size: 30px;
+  display: flex;
 }
 
 .about_contact_name {
-    width: 200px;
-    flex-grow: 1;
+  width: 200px;
+  flex-grow: 1;
 }
 
 .about_contact_email {
-    flex-grow: 4;
+  flex-grow: 4;
 }
 
 .about_contact_part {
-    flex-grow: 0;
+  flex-grow: 0;
 }
 
 .update_coming {
-    width: 500px;
-    height: 500px;
-    font-size: 50px;
-    padding: 150px 50px;
+  width: 500px;
+  height: 500px;
+  font-size: 50px;
+  padding: 150px 50px;
 }
 
 .rank_section {
-    flex-grow: 1;
-    padding: 10px 30px;
-    display: flex;
+  flex-grow: 1;
+  padding: 10px 30px;
+  display: flex;
+  flex-direction: row;
+  gap: 20px; /* 두 열 사이 공간 */
 }
 
 .rank_box {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
+  flex: 1 1 50%;
+  display: flex;
+  flex-direction: column;
 }
 
 .rank_box:first-child {
-    padding-right: 10px;
-    border-right: 1px solid black;
+  border-right: 1px solid black;
+  padding-right: 10px;
 }
 
 .rank_box:last-child {
-    margin-left: 10px;
+  padding-left: 10px;
 }
 
 .rank_bar {
-    flex-basis: 40px;
-    line-height: 40px;
-    font-size: 25px;
-    display: flex;
+  flex-basis: 40px;
+  line-height: 40px;
+  font-size: 25px;
+  display: flex;
 }
 
 .rank_bar_Rank {
-    flex-basis: 100px;
+  flex-basis: 100px;
 }
 
 .rank_bar_Nick {
-    flex-basis: 100px;
-    flex-grow: 2;
+  flex-basis: 100px;
+  flex-grow: 2;
 }
 
 .ranking_row {
-    flex-basis: 40px;
-    line-height: 40px;
-    font-size: 25px;
-    display: flex;
+  display: flex;
+  height: 40px;
+  line-height: 40px;
+  font-size: 25px;
 }
 
 .ranking_row>.rank {
-    flex-basis: 100px;
+  flex-basis: 100px;
 }
 
 .ranking_row>.nickName {
-    flex-basis: 100px;
-    flex-grow: 2;
+  flex-basis: 100px;
+  flex-grow: 2;
 }
 
 .ranking_row>.chip {}
 
 .rank_bar_Chip {
-    flex-basis: 100px;
-    text-align: right;
+  flex-basis: 100px;
+  text-align: right;
 }
 
 .myRank {
-    width: 500px;
-    padding: 3px 10px;
-    border: 2px solid black;
-    border-radius: 10px;
-    position: absolute;
-    right: 0px;
-    top: 30px;
+  width: 500px;
+  padding: 3px 10px;
+  border: 2px solid black;
+  border-radius: 10px;
+  position: absolute;
+  right: 0px;
+  top: 30px;
 }
 
 .community_sub_title {
-    width: 100%;
-    flex-grow: 0;
-    flex-basis: 100px;
-    line-height: 100px;
-    font-size: 70px;
+  width: 100%;
+  flex-grow: 0;
+  flex-basis: 100px;
+  line-height: 100px;
+  font-size: 70px;
 }
 
 .community_sub_box {
-    width: 100%;
-    flex-grow: 1;
-    flex-basis: 500px;
-    display: flex;
-    justify-content: space-around;
+  width: 100%;
+  flex-grow: 1;
+  flex-basis: 500px;
+  display: flex;
+  justify-content: space-around;
 }
 
 .community_sub_footer {
-    width: 100%;
-    flex-basis: 50px;
-    margin-bottom: 30px;
-    position: relative;
+  width: 100%;
+  flex-basis: 50px;
+  margin-bottom: 30px;
+  position: relative;
 }
 
 .section_main {
-    width: 100%;
-    flex-grow: 1;
-    flex-basis: 500px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    position: relative;
-    gap: 20px;
+  width: 100%;
+  flex-grow: 1;
+  flex-basis: 500px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  gap: 20px;
 }
 
 .section_footer {
-    width: 100%;
-    flex-basis: 50px;
-    margin-bottom: 30px;
-    position: relative;
+  width: 100%;
+  flex-basis: 50px;
+  margin-bottom: 30px;
+  position: relative;
 }
 
 .logout_button {
-    position: absolute;
-    left: 0px;
-    bottom: 0px;
-    width: fit-content;
-    font-size: 30px;
-    cursor: pointer;
+  position: absolute;
+  left: 0px;
+  bottom: 0px;
+  width: fit-content;
+  font-size: 30px;
+  cursor: pointer;
 }
 
 .footer_nickName {
-    position: absolute;
-    left: 0px;
-    bottom: 0px;
-    width: fit-content;
-    font-size: 30px;
+  position: absolute;
+  left: 0px;
+  bottom: 0px;
+  width: fit-content;
+  font-size: 30px;
 }
