(refactor) Adoption of SCSS
Work On:
-npm install sass

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -4,6 +4,7 @@
     margin: 0px;
     padding: 0px;
     font-family: 'Indie Flower', cursive;
+    box-sizing: border-box;
 }
 body {
     background-color: #EDE9DF;
