--- a/src/styles/Minigame.module.css
+++ b/src/styles/Minigame.module.css
@@ -1,3 +1,8 @@
+.mainpage {
+  justify-content: center;
+  align-items: center;
+}
+
 .previous_button {
   position: absolute;
   top: 20px;
@@ -16,5 +21,30 @@ div.user_info {
 }
 
 .start_button {
-  
+  width: 100px;
+  height: 50px;
+  text-align: center;
+  line-height: 50px;
+  border: 2px solid black;
+  border-radius: 15px;
+}
+
+.start_button:hover {
+  cursor: pointer;
+}
+
+.start_button:active {
+  background-color: gray;
+}
+
+.slot_machine {
+  width: 300px;
+  height: 100px;
+  display: flex;
+  justify-content: center;
+}
+
+.slot_machine .reel {
+  margin: 20px;
+  font-size: 30px;
 }
